# solana-m

./: .env.dev  .env.prod  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  load_yield.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/setup/: action.yml
.github/workflows/: anchor.yaml
dashboard/: .env.dev.template  .env.prod.template  .env.production  Dockerfile  index.html  package.json
dashboard/src/: main.tsx
dashboard/src/components/: AddressDirectory.tsx  bridge.tsx  bridges.tsx  crosschain-swap.tsx  earner.tsx  extensions.tsx  historical-supply.tsx  index-updates.tsx  links.tsx  navbar.tsx  statsbar.tsx  swap.tsx  vaults.tsx
dashboard/src/hooks/: useAccount.ts  useAddressDirectory.ts
dashboard/src/programs/: index.ts
dashboard/src/services/: bridging.ts  consts.ts  rpc.ts  sdk.ts  subgraph.ts
programs/bridge/: Cargo.toml
programs/bridge/src/: errors.rs  lib.rs  payloads.rs  state.rs
programs/bridge/src/instructions/: initialize.rs  mod.rs  receive_message.rs  send_fill_report.rs  send_token.rs
programs/common/: Cargo.toml
programs/common/src/: lib.rs  payloads.rs
programs/earn/: Cargo.toml  README.md
programs/earn/idls/: ext_swap.json  old_earn.json  wm_ext.json
programs/earn/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/earn/src/instructions/: mod.rs
programs/earn/src/instructions/admin/: initialize.rs  manual_accounts_ops.rs  mod.rs  recover.rs  update_portal_authority.rs
programs/earn/src/instructions/open/: add_registrar_earner.rs  claim_escrow.rs  close_token_account.rs  freeze_earner_account.rs  mod.rs  remove_registrar_earner.rs  request_token_account.rs  thaw_earner_account.rs
programs/earn/src/instructions/portal/: add_earner.rs  mod.rs  propagate_index.rs  remove_earner.rs
programs/earn/src/utils/: conversion.rs  merkle_proof.rs  mod.rs  token.rs
programs/ext_earn/: Cargo.toml
programs/ext_earn/src/: lib.rs
programs/ext_earn/src/instructions/admin/: add_wrap_authority.rs  initialize.rs  mod.rs  remove_wrap_authority.rs
programs/ext_earn/src/instructions/earn_authority/: claim_for.rs  mod.rs  sync.rs
programs/ext_earn/src/instructions/open/: unwrap.rs  wrap.rs
programs/ext_earn/src/state/: global.rs
programs/messenger/: Cargo.toml
programs/messenger/idls/: earn.json  wormhole_adapter.json
programs/messenger/src/: errors.rs  lib.rs  state.rs
programs/messenger/src/instructions/: initialize.rs  mod.rs  receive_message.rs  send_fill_report.rs  send_token.rs
programs/portal/: Cargo.toml
programs/portal/idls/: ext_swap.json
programs/portal/src/: config.rs  error.rs  lib.rs  messages.rs
programs/portal/src/instructions/: admin.rs  initialize.rs  luts.rs  mod.rs  redeem.rs  release_inbound.rs  release_inbound_extension.rs  release_inbound_new.rs  resolve_execute.rs  transfer.rs  transfer_extension.rs
programs/portal/src/ntt_messages/: bpf_loader_upgradeable.rs  chain_id.rs  mod.rs  mode.rs  ntt_manager.rs  transceiver.rs  trimmed_amount.rs  wormhole.rs
programs/portal/src/payloads/: mod.rs  token_transfer.rs
programs/portal/src/queue/: inbox.rs  outbox.rs
programs/portal/src/transceivers/wormhole/: accounts.rs
programs/portal/src/transceivers/wormhole/instructions/: admin.rs  broadcast_id.rs  broadcast_peer.rs  receive_message.rs  release_outbound.rs
programs/wormhole-adapter/: Cargo.toml  README.md
programs/wormhole-adapter/idls/: messenger.json
programs/wormhole-adapter/src/: consts.rs  errors.rs  lib.rs  state.rs
programs/wormhole-adapter/src/instructions/: initialize.rs  mod.rs  receive_message.rs  relay_message.rs  resolve_execute.rs
sdk/: README.md  package.json
sdk/src/: accounts.ts  db.ts  earn_auth.ts  earn_manager.ts  earner.ts  index.ts  logger.ts  merkle.ts  registrar.ts  tokenBalance.ts  transaction.ts  twb.ts
sdk/src/idl/: earn.json  earn.ts  ext_earn.json  ext_earn.ts  index.ts  m_ext.json  m_ext.ts
services/api/: README.md
services/api/fern/: fern.config.json  generators.yml
services/api/fern/definition/: api.yml  events.yml  extensions.yml  swap.yml  tokenAccount.yml  transactions.yml
services/api/sdk/: package.json
services/api/sdk-go/: README.md  environments.go  errors.go  events.go  extensions.go  file_param.go  pointer.go  swap.go  token_account.go  transactions.go
services/api/sdk-go/client/: client.go  client_test.go
services/api/sdk-go/events/: client.go
services/api/sdk-go/extensions/: client.go
services/api/sdk-go/internal/: caller.go  caller_test.go  error_decoder.go  error_decoder_test.go  retrier_test.go
services/api/sdk-ts/: README.md  package.json
services/api/server/: Dockerfile  package.json
services/cli/: README.md  fb.ts  main.ts  package.json  test.ts  utils.ts
services/index-bot/: Dockerfile  HubExecutorEntryPoint.abi.json  README.md  main.ts  package.json
services/repl/: package.json  tsconfig.json
services/repl/source/: app.tsx  cli.tsx  network.ts  swap-and-bridge.tsx  swap.tsx  token-input.tsx  useWallet.tsx
services/shared/: README.md  balances.ts  environment.ts  package.json  slack.ts  validation.ts
services/switchboard/: README.md  index.ts  package.json
services/yield-bot/: Dockerfile  README.md  devnet.ts  main.ts  package.json
substreams/: README.md
substreams/db/: Dockerfile  schema.json
substreams/graph/: Cargo.toml  substreams.yaml
substreams/graph/proto/: transfers.proto
substreams/graph/src/: consts.rs  events.rs  lib.rs  utils.rs
substreams/graph/src/pb/: transfers.v1.rs
substreams/substream-utils/src/: instruction.rs  lib.rs  log.rs  pubkey.rs  transaction.rs
substreams/tooling/: README.md  go.mod  go.sum  main.go
substreams/tooling/mongo/: mongo.go
substreams/tooling/solana/: rpc.go
tests/: package.json  test-utils.ts
tests/programs/: crank.json  crank.ts  ext_swap.json  ext_swap.ts  m_ext.json  m_ext.ts  old_earn.ts  vaa_resolver.json  vaa_resolver.ts
tests/unit/: earn.test.ts  ext_earn.test.ts  indexbot.test.ts  merkle.test.ts  portal.test.ts  sdk.test.ts  yield.test.ts  yieldbot.test.ts
(+20 files in other folders)
