[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"
cfg-if = "1.0"
