[package]
name = "earn"
version = "0.2.0"
description = "Earner management and yield distribution program for M"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "lib"]
name = "earn"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = ["testing"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
release = []
testing = []
mainnet = []
devnet = []

[dependencies]
anchor-lang = { workspace = true, features = [
    "init-if-needed",
] }
anchor-spl.workspace = true
spl-token-2022.workspace = true
solana-security-txt.workspace = true
cfg-if.workspace = true
