[package]
name = "ext_earn"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ext_earn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
testing = []
mainnet = []
devnet = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
spl-token-2022.workspace = true
cfg-if.workspace = true
solana-security-txt.workspace = true
earn = { path = "../earn", features = ["cpi"] }