[package]
name = "messenger"
version = "0.1.0"
description = "bridge program that interacts with bridge adapters"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "messenger"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
common = { path = "../common" }
