[package]
name = "portal"
version = "0.2.0"
description = "Modified Wormhole NTT manager program for bridging M to/from other chains"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "portal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
devnet = ["wormhole-anchor-sdk/solana-devnet"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
spl-token-2022.workspace = true
wormhole-anchor-sdk = { git = "https://github.com/wormhole-foundation/wormhole-scaffolding", default-features = false, rev = "3be80a9"}
wormhole-io = "0.1.3"
bitmaps = "3.2.1"
cfg-if.workspace = true
solana-security-txt.workspace = true
earn = { path = "../earn", features = ["cpi"] }
ext_swap = { git = "https://github.com/m0-foundation/solana-m-extensions", rev= "b55a2fd", features = ["cpi"] }
