[package]
name = "wormhole-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_adapter"

[features]
default = ["mainnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
mainnet = []
devnet = []

[dependencies]
anchor-lang.workspace = true
cfg-if.workspace = true

