[package]
name = "wormhole-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_adapter"

[features]
default = ["mainnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
mainnet = []
devnet = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
common = { path = "../common" }
cfg-if.workspace = true
executor-account-resolver-svm = { version = "0.0.1", git = "https://github.com/wormholelabs-xyz/executor-account-resolver-svm", rev = "a39fe39cece715b3e1d1afef1f6e47740595a562" }

[dev-dependencies]
base64 = "0.22.1"
