[package]
name = "m_token_transactions"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.1"
prost = "0.13.5"
substreams = "0.6.1"
regex = "1.10.5"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-utils = { git = "https://github.com/m0-foundation/substreams-solana-utils" }
anchor-lang.workspace = true
five8_const = "0.1.3"
base64 = "0.22.1"
